Mantis

08.XX.2001  -   0.15.5

 * Fixed sort problems on view_all_bugs_page.php3
 * Fixed hide inactive problem in manage_page.php3
 * Fixed mysterious problem with global variables being set to ""
 * Fixed redirect problem when bug report not correctly filled out.
 * Added commented out examples for alternate links in css_inc.php

08.19.2001  -   0.15.4

 * Added pre-selecting project. Hint: login_page.php3?f_project_id=0000001
 * Fixed Warning: Missing argument 5 for print_manage_user_sort_link() in core_print_API.php
 * Fixed sorting in buglist is now preserved when going to next or prev page.
 * Fixed sorting in buglist. Bugs with high priority is now always first.
 * Replaced header( "Location: " ) calls with print_header_redirect().
 * Fixed error in simple bug search.
 * Added phpMailer support.
 * Fixed email error regarding devleoper notification on bug submissions.
 * Updated configuration document.

07.29.2001  -   0.15.3

 * Added wordwrap() to text formatting in email messages.  Affects description and bugnotes.
 * Added new function process_plain_password().  Not used yet.
 * Added N/A to reproducibility
 * Added PHP version check to admin_check.php3
 * Added simple text search field to all view_all* pages.  This can also be used to lookup a bug by id
 * Added user count values to the manage page
 * Added $g_hide_user_email to toggle automatic mailto: linking of usernames.
 * Added prelimnary support for jpgraphs support.
 * Fixed bug in displaying date_submitted in emails
 * Fixed "Hide Inactive" checkbox in manage_page.php3
 * Fixed access check error where Viewers could add bugnotes
 * Ran a perl one-liner to try to remove all extra ^Ms from files
 * Renamed $f_show_changed to $f_highlight_changed
 * Removed get_bug_link_email - unused
 * Removed extra $v_summary = string_display() line in view_all_inc.php
 * Cleaned up email validation code

07.13.2001  -   0.15.2

 * Fixed explode() error in view_all_unassign_bug.php3