@@ -78,7 +78,7 @@
 		</td>
 		<td>
 			<select name="f_category">
-				<option value="" SELECTED><? echo $s_select_category ?>
+				<option value="" SELECTED><? echo $s_select_category ?></option>
 				<? print_category_option_list( $f_category ) ?>
 			</select>
 		</td>
@@ -90,7 +90,7 @@
 		</td>
 		<td>
 			<select name="f_reproducibility">
-				<option value="" SELECTED><? echo $s_select_reproducibility ?>
+				<option value="" SELECTED><? echo $s_select_reproducibility ?></option>
 				<? print_enum_string_option_list( $s_reproducibility_enum_string, $f_reproducibility ) ?>
 			</select>
 		</td>
@@ -102,7 +102,7 @@
 		</td>
 		<td>
 			<select name="f_severity">
-				<option value="" selected><? echo $s_select_severity ?>
+				<option value="" selected><? echo $s_select_severity ?></option>
 				<? print_enum_string_option_list( $s_severity_enum_string, $f_severity ) ?>
 			</select>
 		</td>
